[Laxman]- added github actions setup to run tests in pipeline , changes in pom.xml file